# CharProject

./: .gitignore  CMakeLists.txt  README.md
OCR/: All Variations Dataset.ipynb  Classifying Sequence of Characters.ipynb  Construct Sanborn Letter Folders.ipynb  Constructing Digit Guesses.ipynb  README.md  Sanborn Digit Model.ipynb  Sanborn Words Test Labeling.ipynb  Testing and Validation.ipynb  Text Recognition 1.ipynb  create_dataset.py  crnn_train.py  data_supplement_sanborn.ipynb  dataset.py  detect_map_text.py  model_functions.py  models.py  predict_street.py  sanborn_concat_characters.ipynb  seq_to_seq_train.py  utils.py
OCR/models/: sanborn_digit_model.pth  upside_down_digit_model.pth
OCR/rotation/: Pipfile  PyTorch.ipynb  Untitled.ipynb  Untitled1.ipynb  by_letter_counts.json  by_letter_counts.tex  gu_method_mod180.tex  gu_method_predict.tex  keras.ipynb  mean_error_by_letter.json  mean_error_by_letter.tex  mean_error_by_letter_mod180.json  mean_error_by_letter_mod180.tex
maps/: 00065u.tif
src/: curb_lines.cpp  find_words.cpp  geometry.h  gu_chars.cpp  image_debug.cpp  image_proc.cpp  image_proc.h  image_util.cpp  log.cpp  match_streets.cpp  run_image_proc.cpp  seam_carve.cpp  serialize.cpp  shrink.cpp  thinning.cpp  vectorize.cpp  word_proc.cpp  word_project.cpp
src/skeletonPruning/: compile.sh  run.sh
src/skeletonPruning/src/imageOp/: ImageOp.java
src/skeletonPruning/src/util/: BPointTest.java  BoundaryCurve.java  CircularOrder.java  Config.java  CubicRoots.java  MidPointCalculator.java  PseudoRandomHashMap.java  PseudoRandomMap.java  Time.java  (+1 more)
(+32 files in other folders)
